Fix Design Collapse

--- a/src/public/scss/_layout.scss
+++ b/src/public/scss/_layout.scss
@@ -92,13 +92,13 @@ header {
   width: 100%;
   padding: 15px 0;
   background: #333333;
-
+  text-align: right;
   .footer_copyright {
     font-style: normal;
     font-weight: 900;
     font-size: 13px;
     line-height: 15px;
-    margin: 0 0 0 3%;
+    margin:0 3%;
     color: #fff;
   }
 }
